--- a/locale/django.pot
+++ b/locale/django.pot
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-30 07:41+0000\n"
+"POT-Creation-Date: 2023-03-13 17:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4144,7 +4144,7 @@ msgid ""
 "Having and maintaining an appropriate information security policy and "
 "charter. It should at least contain the basics as highlighted in the charter "
 "templates that can be found in the <a href=\"https://trustbox.cases.lu\" "
-"target=\"_blank\">NC3 Trustbox</a>. But not only creating but correctly "
+"target=\"_blank\">CGI Trustbox</a>. But not only creating but correctly "
 "maintaining a more detailed security policy is essential and should be done "
 "as soon as possible."
 msgstr ""
@@ -4265,38 +4265,38 @@ msgstr ""
 msgid ""
 "If you are obliged to comply with the NIS directive, then you should "
 "consider <a href=\"https://www.enisa.europa.eu/topics/nis-directive/minimum-"
-"security-measures-for-operators-of-essentials-services\" target=\"_blank"
-"\">this mapping table</a> of security measures provided by ENISA. In "
-"addition, depending on your sector you should consider this documents:"
-"<ul><li>Digital service provider<ul><li><a href=\"https://www.enisa.europa."
-"eu/publications/minimum-security-measures-for-digital-service-providers\" "
-"target=\"_blank\">Minimum security measures for digital service providers</"
-"a></li></ul></li><li>Telecom sector<ul><li><a href=\"https://www.enisa."
-"europa.eu/publications/guideline-on-security-measures-under-the-eecc\" "
+"security-measures-for-operators-of-essentials-services\" "
+"target=\"_blank\">this mapping table</a> of security measures provided by "
+"ENISA. In addition, depending on your sector you should consider this "
+"documents:<ul><li>Digital service provider<ul><li><a href=\"https://www."
+"enisa.europa.eu/publications/minimum-security-measures-for-digital-service-"
+"providers\" target=\"_blank\">Minimum security measures for digital service "
+"providers</a></li></ul></li><li>Telecom sector<ul><li><a href=\"https://www."
+"enisa.europa.eu/publications/guideline-on-security-measures-under-the-eecc\" "
 "target=\"_blank\">Guideline on security measures under the EECC</a></li></"
 "ul></li><li>Healthcare sector<ul><li><a href=\"https://www.enisa.europa.eu/"
-"publications/cloud-security-for-healthcare-services\" target=\"_blank"
-"\">Cloud security for healthcare services</a></li><li><a href=\"https://www."
-"enisa.europa.eu/publications/good-practices-for-the-security-of-healthcare-"
-"services\" target=\"_blank\">Good practices for the security of healthcare "
-"services</a></li></ul></li><li>Transport sector (railways)<ul><li><a href="
-"\"https://www.enisa.europa.eu/publications/railway-cybersecurity\" target="
-"\"_blank\">Railway cybersecurity</a></li></ul></li><li>Energy "
-"sector<ul><li><a href=\"https://www.enisa.europa.eu/publications/"
-"communication-network-interdependencies-in-smart-grids\" target=\"_blank"
-"\">Communication network interdependencies in smart grids</a></li><li><a "
-"href=\"https://www.enisa.europa.eu/publications/power-sector-dependency\" "
-"target=\"_blank\">Power sector dependency</a></li></ul></li><li>Financial "
-"sector<ul><li><a href=\"https://www.enisa.europa.eu/publications/"
-"EU_Cybersecurity_Initiatives_in_the_Finance_Sector\" target=\"_blank\"> EU "
-"Cybersecurity Initiatives in the Finance Sector</a></li><li><a href="
-"\"https://www.enisa.europa.eu/publications/mobile-payments-security\" target="
-"\"_blank\">Mobile payments security</a></li><li><a href=\"https://www.enisa."
-"europa.eu/publications/blockchain-security\" target=\"_blank\">Blockchain "
-"security</a></li><li><a href=\"https://www.enisa.europa.eu/publications/"
-"network-and-information-security-in-the-finance-sector\" target=\"_blank"
-"\">Network and information security in the finance sector</a></li></ul></"
-"ul></li>"
+"publications/cloud-security-for-healthcare-services\" "
+"target=\"_blank\">Cloud security for healthcare services</a></li><li><a "
+"href=\"https://www.enisa.europa.eu/publications/good-practices-for-the-"
+"security-of-healthcare-services\" target=\"_blank\">Good practices for the "
+"security of healthcare services</a></li></ul></li><li>Transport sector "
+"(railways)<ul><li><a href=\"https://www.enisa.europa.eu/publications/railway-"
+"cybersecurity\" target=\"_blank\">Railway cybersecurity</a></li></ul></"
+"li><li>Energy sector<ul><li><a href=\"https://www.enisa.europa.eu/"
+"publications/communication-network-interdependencies-in-smart-grids\" "
+"target=\"_blank\">Communication network interdependencies in smart grids</"
+"a></li><li><a href=\"https://www.enisa.europa.eu/publications/power-sector-"
+"dependency\" target=\"_blank\">Power sector dependency</a></li></ul></"
+"li><li>Financial sector<ul><li><a href=\"https://www.enisa.europa.eu/"
+"publications/EU_Cybersecurity_Initiatives_in_the_Finance_Sector\" "
+"target=\"_blank\"> EU Cybersecurity Initiatives in the Finance Sector</a></"
+"li><li><a href=\"https://www.enisa.europa.eu/publications/mobile-payments-"
+"security\" target=\"_blank\">Mobile payments security</a></li><li><a "
+"href=\"https://www.enisa.europa.eu/publications/blockchain-security\" "
+"target=\"_blank\">Blockchain security</a></li><li><a href=\"https://www."
+"enisa.europa.eu/publications/network-and-information-security-in-the-finance-"
+"sector\" target=\"_blank\">Network and information security in the finance "
+"sector</a></li></ul></ul></li>"
 msgstr ""
 
 #: data/fit4operatorsurvey/questions.json:499
@@ -4328,10 +4328,11 @@ msgstr ""
 msgid ""
 "Irrespective of your obligations in terms of risk management and "
 "cybersecurity, you should consider <a href=\"https://www.enisa.europa.eu/"
-"publications/guideline-on-security-measures-under-the-eecc\" target=\"_blank"
-"\">the 29 Security Objectives</a> listed by ENISA split in 8 areas, and "
-"ordered by level of sophistication. To check if you have implemented "
-"security measures in your company in a meaningful and risk-aware way."
+"publications/guideline-on-security-measures-under-the-eecc\" "
+"target=\"_blank\">the 29 Security Objectives</a> listed by ENISA split in 8 "
+"areas, and ordered by level of sophistication. To check if you have "
+"implemented security measures in your company in a meaningful and risk-aware "
+"way."
 msgstr ""
 
 #: data/fit4operatorsurvey/questions.json:541
@@ -4727,8 +4728,8 @@ msgid ""
 "definitions of personal data, you can consult Art. 4 of GDPR, and for the "
 "tasks for a responsible with data protection, Art. 39. In addition to that, "
 "you can also consider the <a href=\"https://edpb.europa.eu/our-work-tools/"
-"our-documents/guidelines/data-protection-officer_en\" target=\"_blank"
-"\">guidelines</a> on this topic from the EDPB."
+"our-documents/guidelines/data-protection-officer_en\" "
+"target=\"_blank\">guidelines</a> on this topic from the EDPB."
 msgstr ""
 
 #: data/fit4privacy/questions.json:39
@@ -4832,8 +4833,8 @@ msgid ""
 "Does your company process personal data that can be sensitive (e.g., taken "
 "out of context, can be used to infer racial or ethnic origin, political "
 "opinions, religious or philosophical beliefs, trade union membership, "
-"genetic data, biometric data, sex life or sexual orientation)? (See <a href="
-"\"https://www.privacy-regulation.eu/en/article-9-processing-of-special-"
+"genetic data, biometric data, sex life or sexual orientation)? (See <a "
+"href=\"https://www.privacy-regulation.eu/en/article-9-processing-of-special-"
 "categories-of-personal-data-GDPR.htm\" target=\"_blank\">GDPR Article 9</a>)"
 msgstr ""
 
@@ -4987,10 +4988,11 @@ msgid ""
 "organization has put in place to protect that data. To your customers, as "
 "well as to suppliers and third parties, you have a similar obligation to be "
 "transparent (for example, by updating contracts or terms and conditions). In "
-"terms of what to communicate to them, you should consider following <a href="
-"\"https://www.privacy-regulation.eu/en/article-13-information-to-be-provided-"
-"where-personal-data-are-collected-from-the-data-subject-GDPR.htm\" target="
-"\"_blank\">Art. 13 and 14 of GDPR</a> when it comes to this information."
+"terms of what to communicate to them, you should consider following <a "
+"href=\"https://www.privacy-regulation.eu/en/article-13-information-to-be-"
+"provided-where-personal-data-are-collected-from-the-data-subject-GDPR.htm\" "
+"target=\"_blank\">Art. 13 and 14 of GDPR</a> when it comes to this "
+"information."
 msgstr ""
 
 #: data/fit4privacy/questions.json:343
@@ -5009,8 +5011,8 @@ msgid ""
 "efficient and succinct manner, and differentiate them from other non-privacy "
 "related information such as contractual clauses or general terms of use. For "
 "more inspiration on this topic, there is an EDPB guidance on transparency <a "
-"href=\"https://ec.europa.eu/newsroom/article29/items/622227/en\" target="
-"\"_blank\">here</a>."
+"href=\"https://ec.europa.eu/newsroom/article29/items/622227/en\" "
+"target=\"_blank\">here</a>."
 msgstr ""
 
 #: data/fit4privacy/questions.json:359
@@ -5411,8 +5413,8 @@ msgid ""
 "protection authority in your country has issued as blacklist of processing "
 "operations (i.e., what personal data processing is likely to require DPIAs). "
 "For Luxembourg, the list is available <a href=\"https://cnpd.public.lu/"
-"content/dam/cnpd/fr/actualites/national/2019/Delib-34-2019-du-6-mars-2019.pdf"
-"\" target=\"_blank\">in annex here</a>. If your company acts in multiple "
+"content/dam/cnpd/fr/actualites/national/2019/Delib-34-2019-du-6-mars-2019."
+"pdf\" target=\"_blank\">in annex here</a>. If your company acts in multiple "
 "countries, ensure that you look at the recommendations of all data "
 "protection authorities in all countries you act in."
 msgstr ""
@@ -5630,8 +5632,8 @@ msgid ""
 "your company, not just because of GDPR but for your own company's continuity "
 "and operations point of view. You should consider the guidelines by ENISA, "
 "from 2016 to 2018, available <a href=\"https://www.enisa.europa.eu/topics/"
-"data-protection/security-of-personal-data/security-measures\" target=\"_blank"
-"\">here</a>."
+"data-protection/security-of-personal-data/security-measures\" "
+"target=\"_blank\">here</a>."
 msgstr ""
 
 #: data/fit4privacy/questions.json:1083
@@ -5646,8 +5648,8 @@ msgid ""
 "but to be aware and continously improving. You can also get inspiration on "
 "evaluating potential risks and countermeasures from the guidelines by ENISA "
 "from 2016, 2017 and 2018, available <a href=\"https://www.enisa.europa.eu/"
-"topics/data-protection/security-of-personal-data/security-measures\" target="
-"\"_blank\">here</a>."
+"topics/data-protection/security-of-personal-data/security-measures\" "
+"target=\"_blank\">here</a>."
 msgstr ""
 
 #: data/fit4privacy/questions.json:1099
@@ -5662,8 +5664,8 @@ msgid ""
 "exercises of business incidents occurring, audits, or certifications. You "
 "can also get some inspiration from the reports and guidelines by ENISA from "
 "2016, 2017 and 2018, available <a href=\"https://www.enisa.europa.eu/topics/"
-"data-protection/security-of-personal-data/security-measures\" target=\"_blank"
-"\">here</a>."
+"data-protection/security-of-personal-data/security-measures\" "
+"target=\"_blank\">here</a>."
 msgstr ""
 
 #: data/fit4privacy/questions.json:1115
@@ -5956,7 +5958,7 @@ msgstr ""
 #: templates/parts/fit4ehealth/footer_part.html:7
 #: templates/parts/fit4ehealth/footer_part.html:8
 #: templates/parts/footer_part.html:7 templates/parts/footer_part.html:8
-msgid "A service provided by NC3-LU"
+msgid "A service provided by CGI"
 msgstr ""
 
 #: templates/parts/fit4ehealth/footer_part.html:14
@@ -5986,7 +5988,7 @@ msgstr ""
 msgid ""
 "This self-assessment tool is named %(tool_name)s to highlight the "
 "introduction to information security. It is also a prerequisite for doing a "
-"NC3 Diagnostic: a minimum score of %(minimal_acceptable_score)s/100 is "
+"CGI Diagnostic: a minimum score of %(minimal_acceptable_score)s/100 is "
 "required. The purpose for this restriction gives us the opportunity to "
 "better tailor the recommendations to your organization during the Diagnostic."
 "<br /><br /> During this self-assessment multiple choice questions were "
@@ -6017,7 +6019,7 @@ msgid ""
 "recommendations are neither exclusive nor exhaustive.<br /><br /> It should "
 "also be noted that the information you have provided to us will be recorded "
 "for statistical reasons. Due to the nature of the data, we can not identify "
-"you. Unless you later contact us to do a Diagnostic NC3."
+"you. Unless you later contact us to do a Diagnostic CGI."
 msgstr ""
 
 #: templates/report/questions.html:1
@@ -6042,7 +6044,7 @@ msgstr ""
 #, python-format
 msgid ""
 "You have achieved %(SCORE)s/100 with your answers. You must reach at least "
-"%(minimal_acceptable_score)s/100 to be able to make a NC3 Diagnosis.<br /"
+"%(minimal_acceptable_score)s/100 to be able to make a CGI Diagnosis.<br /"
 "><br /> We remind you that this is a self-assessment, and it is important to "
 "understand that all the results can not in any way be exhaustive."
 msgstr ""
@@ -6082,7 +6084,7 @@ msgid ""
 msgstr ""
 
 #: templates/survey/base.html:19
-msgid "a NC3 self-assessment tool!"
+msgid "a CGI self-assessment tool!"
 msgstr ""
 
 #: templates/survey/continue.html:4
@@ -6119,8 +6121,8 @@ msgstr ""
 #: templates/survey/finishedSurvey.html:42
 #, python-format
 msgid ""
-"Based on your score %(score)s, the NC3 Diagnostic is not available for "
-"your organization at this moment. We recommend you improve the information "
+"Based on your score %(score)s, the CGI Diagnostic is not available for your "
+"organization at this moment. We recommend you improve the information "
 "security maturity level by implementing the recommendations listed below. If "
 "you need any information security training to raise awareness in your "
 "company, do not hesitate to"
@@ -6131,15 +6133,15 @@ msgid "Your results link"
 msgstr ""
 
 #: templates/survey/finishedSurvey.html:72
-msgid "About the NC3 Diagnostic"
+msgid "About the CGI Diagnostic"
 msgstr ""
 
 #: templates/survey/finishedSurvey.html:74
 msgid ""
-"The NC3 Diagnostic is a service which analyses the company maturity in the "
+"The CGI Diagnostic is a service which analyses the company maturity in the "
 "information security depending on company's requirements. The analysis "
-"duration can take approximately 2 hours. A consultant from NC3 will come "
-"to your company's premises, and ask around 30 questions concerning your "
+"duration can take approximately 2 hours. A consultant from CGI will come to "
+"your company's premises, and ask around 30 questions concerning your "
 "information security, mostly organizational questions and possibly some "
 "technical questions. You will receive a detailed report which will contain a "
 "maturity estimation as well as recommendations to enhance the information "
@@ -6148,8 +6150,8 @@ msgstr ""
 
 #: templates/survey/finishedSurvey.html:86
 msgid ""
-"The NC3 Diagnostic is available for all the companies located in "
-"Luxembourg and free of charge."
+"The CGI Diagnostic is available for all the companies located in Luxembourg "
+"and free of charge."
 msgstr ""
 
 #: templates/survey/finishedSurvey.html:123
@@ -6178,7 +6180,7 @@ msgid "Send"
 msgstr ""
 
 #: templates/survey/index.html:18
-msgid "Welcome to the NC3 self-assessment tool:"
+msgid "Welcome to the CGI self-assessment tool:"
 msgstr ""
 
 #: templates/survey/index.html:28
@@ -6237,7 +6239,7 @@ msgstr ""
 msgid ""
 "Dear Cases Team,\n"
 "\n"
-"We would like to request a Diagnostic NC3 from you.\n"
+"We would like to request a Diagnostic CGI from you.\n"
 "\n"
 "Here is our evaluation results identifier: %(userId)s\n"
 "\n"
